Fixed Text color issue, fixed label alignments

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -28,3 +28,6 @@
 .react-flow__edge:hover .react-flow__edge-path {
   stroke: rgba(255, 255, 255, 0.5);
 }
+textarea.jer-input-text {
+  color: white !important;
+}
